# pytest-hackerrank

./: README.md  setup.cfg
src/pytest_hackerrank/: __init__.py  generators.py  testutil.py
