[metadata]
name = pytest-hackerrank
version = 0.1
author = Andrei Olar
author_email = andrei.olar@gmail.com
description = Easily create parametrised tests from Hackerrank test cases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/koosie0507/pytest-hackerrank
project_urls =
    Bug Tracker = https://github.com/koosie0507/pytest-hackerrank/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Unlicense
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src